--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 PORT=3000
 
 # Database Configuration
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=admin
-DB_NAME=RentaCarros2
+DB_HOST=mysql-backend-juabngonzalez4-13d9.g.aivencloud.com
+DB_USER=avnadmin
+DB_PASSWORD=AVNS_kFAEVoDNjL-0U3KaH68
+DB_NAME=defaultdb
 
 # JWT Configuration
 JWT_SECRET=supersecretkey
